tests/snapshots/cli_insta__compare.valid-semver.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - compare
    - 1.2.3
    - 4.5.6
---
success: true
exit_code: 0
----- stdout -----
---
semantic_ordering: Less
lexical_ordering: Less
----- stderr -----
