tests/snapshots/cli_insta__filter.invalid-order.1.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - filter-test
    - "--filter"
    - 2.0.0
    - "--semantic-version"
    - ">1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value '>1' for '--semantic-version <SEMANTIC_VERSION>': unexpected character '>' while parsing major version number

For more information, try '--help'.
