tests/snapshots/cli_insta__filter.invalid-semver.2.snap
---
source: tests/cli_insta.rs
info:
  program: sem-tool
  args:
    - filter-test
    - "--filter"
    - ">1"
    - "--semantic-version"
    - x.y.z
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'x.y.z' for '--semantic-version <SEMANTIC_VERSION>': unexpected character 'x' while parsing major version number

For more information, try '--help'.
